test_regress/t/t_case_enum_incomplete_wildcard_bad.out
%Warning-CASEINCOMPLETE: t/t_case_enum_incomplete_wildcard_bad.v:26:12: 2 enum items not covered by case:
                                                                      : 'S10' (defined at t/t_case_enum_incomplete_wildcard_bad.v:16:5)
                                                                      : 'SX0' (defined at t/t_case_enum_incomplete_wildcard_bad.v:18:5)
   26 |     unique case (state)
      |            ^~~~
                         ... For warning description see https://verilator.org/warn/CASEINCOMPLETE?v=latest
                         ... Use "/* verilator lint_off CASEINCOMPLETE */" and lint_on around source to disable this message.
%Warning-CASEINCOMPLETE: t/t_case_enum_incomplete_wildcard_bad.v:30:12: 3 enum items not covered by case:
                                                                      : 'S00' (defined at t/t_case_enum_incomplete_wildcard_bad.v:14:5)
                                                                      : 'SX0' (defined at t/t_case_enum_incomplete_wildcard_bad.v:18:5)
                                                                      : 'S0X' (defined at t/t_case_enum_incomplete_wildcard_bad.v:19:5)
   30 |     unique case (state)
      |            ^~~~
%Warning-CASEINCOMPLETE: t/t_case_enum_incomplete_wildcard_bad.v:35:12: 2 enum items not covered by case:
                                                                      : 'S10' (defined at t/t_case_enum_incomplete_wildcard_bad.v:16:5)
                                                                      : 'SX0' (defined at t/t_case_enum_incomplete_wildcard_bad.v:18:5)
   35 |     unique casez (state)
      |            ^~~~~
%Warning-CASEINCOMPLETE: t/t_case_enum_incomplete_wildcard_bad.v:40:5: Case values incompletely covered. Example values:
                                                                     : 3
   40 |     case (state)
      |     ^~~~
%Error: Exiting due to
